@@ -36,6 +36,7 @@ Version 1.5.6+svn:
    * Added a border and blurring to story screens' text blocks.
    * Improved wrapping in the new widgets.
    * Improved easy close handling.
+   * Added a horizontal scrollbar widget.
  * WML engine:
    * Added the 'round' key to [set_variable].
  * Miscellaneous and bug fixes:
